Poms and Manifests were fixed
Maven Build finally runs (at least locally)